--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     tools:context="com.able.libs.MainActivity">
 
-    <com.able.libs.views.Bezier3
+    <com.able.libs.views.BezierMagicCircle
+        android:id="@+id/bezierView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
