--- a/app/src/main/res/layout/super_main_layout.xml
+++ b/app/src/main/res/layout/super_main_layout.xml
@@ -43,4 +43,10 @@
         android:layout_height="wrap_content"
         android:text="MpAndroid测试"/>
 
+    <Button
+        android:id="@+id/gotoPermissionTest"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="EasyPermission测试"/>
+
 </LinearLayout>
