--- a/app/src/main/res/layout/mp_android_chart_activity_layout.xml
+++ b/app/src/main/res/layout/mp_android_chart_activity_layout.xml
@@ -7,6 +7,5 @@
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/barchart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/seekBar1"/>
+        android:layout_height="match_parent"/>
 </LinearLayout>
