--- a/app/src/main/res/layout/super_main_layout.xml
+++ b/app/src/main/res/layout/super_main_layout.xml
@@ -49,4 +49,10 @@
         android:layout_height="wrap_content"
         android:text="EasyPermission测试"/>
 
+    <Button
+        android:id="@+id/gotoTouchEventTest"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="按键消息派发机制测试"/>
+
 </LinearLayout>
