按键消息测试

--- a/app/src/main/res/layout/touch_event_test.xml
+++ b/app/src/main/res/layout/touch_event_test.xml
@@ -6,13 +6,13 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <Button
+    <com.able.libs.touchEventFlowTest.TouchEventView
         android:id="@+id/view1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="view1"/>
 
-    <Button
+    <com.able.libs.touchEventFlowTest.TouchEventView
         android:id="@+id/view2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
