--- a/app/src/main/res/layout/super_main_layout.xml
+++ b/app/src/main/res/layout/super_main_layout.xml
@@ -54,5 +54,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="按键消息派发机制测试"/>
+    <Button
+        android:id="@+id/gotoPickerViewTest"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="PickerView测试"/>
 
 </LinearLayout>
