--- a/app/src/main/res/layout/picker_activity_layout.xml
+++ b/app/src/main/res/layout/picker_activity_layout.xml
@@ -3,4 +3,8 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/show_picker"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
