添加RecyclerAdapter测试界面

--- a/app/src/main/res/layout/super_main_layout.xml
+++ b/app/src/main/res/layout/super_main_layout.xml
@@ -60,4 +60,9 @@
         android:layout_height="wrap_content"
         android:text="PickerView测试"/>
 
+    <Button
+        android:id="@+id/gotoRecyclerViewAdapterTest"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="RecyclerAdapter测试"/>
 </LinearLayout>
